stop horizontal scrolling and add hover effects to header

--- a/src/components/AppContent.css
+++ b/src/components/AppContent.css
@@ -8,6 +8,10 @@ body {
   background-image:url("../background.jpg");
   background-repeat:no-repeat;
   background-size:cover;
+  padding:0; 
+  margin:0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .hide {
@@ -32,6 +36,8 @@ body {
 header {
   grid-column: span 3;
   max-width: 100vw;
+  position: sticky;
+  top: 0;
 }
 
 .game-buttons {
